# tatara

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  build.rs  checks.lisp  flake.nix
docs/: boot-the-vm.md  rust-lisp.md  (+7 more)
ro-cli/: Cargo.toml
ro-cli/src/: api.rs  commands.rs  config.rs  main.rs  nix_config.rs  output.rs
tatara-api/: Cargo.toml
tatara-api/src/: graphql.rs  rest.rs
tatara-build-remote/: Cargo.toml
tatara-build-remote/src/: lib.rs  transports.rs
tatara-build-remote/tests/: layered_smoke.rs
tatara-cli/: Cargo.toml
tatara-cli/src/: main.rs  server.rs
tatara-cli/src/cli/: alloc.rs  context.rs  deploy.rs  event.rs  forge.rs  job.rs  mod.rs  node.rs  output.rs  release.rs  source.rs  top.rs
tatara-cli/src/commands/: client_cmd.rs  logs.rs  mod.rs  run.rs  server_cmd.rs  status.rs  stop.rs
tatara-closed-loop-probe/: Cargo.toml
tatara-closed-loop-probe/src/: main.rs  probe.rs
tatara-core/: Cargo.toml
tatara-core/src/: config.rs  lib.rs
tatara-core/src/catalog/: mod.rs
tatara-core/src/cluster/: roles.rs  types.rs
tatara-core/src/domain/: allocation.rs  classification.rs  compliance_binding.rs  convergence_graph.rs  convergence_state.rs  dag.rs  emission.rs  event.rs  idempotency.rs  job.rs  lifecycle.rs  mod.rs  multi_distance.rs  node.rs  point_id.rs  saga.rs  secret.rs  source.rs  traced_event.rs  volume.rs
tatara-domains/: Cargo.toml  README.md
tatara-domains/src/: lib.rs
tatara-engine/: Cargo.toml  build.rs
tatara-engine/src/: lib.rs
tatara-engine/src/catalog/: mod.rs  registry.rs
tatara-engine/src/client/: executor.rs  log_collector.rs  mod.rs
tatara-engine/src/cluster/: discovery.rs  gossip.rs  membership.rs  mod.rs  network.rs  raft_log.rs  raft_node.rs  raft_sm.rs  store.rs
tatara-engine/src/domain/: attestation.rs  convergence.rs  convergence_planner.rs  dag_executor.rs  emission_evaluator.rs  evaluation.rs  health_probe.rs  mod.rs  port_allocator.rs  reconciler.rs  saga_executor.rs  scheduler.rs  state_store.rs  store_adapter.rs  substrate_manager.rs  volume_manager.rs
tatara-engine/src/drivers/: exec.rs  kasou.rs  kube.rs  mod.rs  nix.rs  nix_build.rs  oci.rs  wasi.rs
tatara-engine/src/grpc/: external.rs  mod.rs
tatara-engine/src/kindling_bridge/: client.rs  identity.rs  mod.rs  report.rs
tatara-engine/src/metrics/: mod.rs
tatara-engine/src/nats/: mod.rs
tatara-engine/src/nix_eval/: evaluator.rs  mod.rs  sui_client.rs
tatara-engine/src/secrets/: env.rs  mod.rs  sops.rs
tatara-eval/: Cargo.toml
tatara-eval/src/: builtins.rs  env.rs  error.rs  interpreter.rs  lib.rs  system.rs  value.rs
tatara-export-worker/: Cargo.toml
tatara-export-worker/src/: lib.rs  main.rs
tatara-github-watcher/: Cargo.toml
tatara-github-watcher/src/: allocation_factory.rs  config.rs  event.rs  handler.rs  lib.rs  main.rs  verify.rs
tatara-hospedeiro/: Cargo.toml
tatara-hospedeiro/src/: lib.rs  reconcile.rs  supervisor.rs
tatara-hospedeiro/tests/: reconcile_intent_end_to_end.rs  supervisor_end_to_end.rs
tatara-hvf/: Cargo.toml
tatara-hvf/src/: hvf_darwin.rs  lib.rs  stub.rs
tatara-hvf/tests/: hvf_baseline.rs
tatara-init/: Cargo.toml
tatara-init/src/: config.rs  lib.rs  mounts.rs  supervisor.rs
tatara-kube/: Cargo.toml  DEPRECATED.md
tatara-kube/src/: apply.rs  cluster.rs  config.rs  error.rs  health.rs  helm.rs  lib.rs  metrics.rs  nix_eval.rs  ordering.rs  prune.rs  reconciler.rs  resource.rs
tatara-lattice/: Cargo.toml
tatara-lattice/src/: baseline.rs  lib.rs
tatara-lisp/: Cargo.toml  DESIGN.md  README.md
tatara-lisp/src/: ast.rs  closed_set.rs  compile.rs  compiler_spec.rs  diagnostic.rs  domain.rs  error.rs  interop.rs  lib.rs  macro_expand.rs  reader.rs
tatara-mcp/: Cargo.toml
tatara-mcp/src/: lib.rs
tatara-mcp/src/tools/: analyze.rs  influence.rs  mod.rs  observe.rs  report.rs  verify.rs
tatara-net/: Cargo.toml
tatara-net/src/: config.rs  lib.rs  traits.rs  types.rs
tatara-net/src/platform/linux/: mod.rs
tatara-net/src/wasi/: mod.rs
tatara-nix/: Cargo.toml
tatara-nix/src/: derivation.rs  evaluator.rs  flake.rs  lib.rs  module.rs  overlay.rs  overlay_compose.rs  realize.rs  resolver.rs  store.rs  synth.rs
tatara-operator/: CLAUDE.md  Cargo.toml  DEPRECATED.md
tatara-operator/deploy/: crds.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  rbac.yaml
tatara-operator/src/: api_server.rs  lib.rs  main.rs  utils.rs  webhooks.rs
tatara-operator/src/controllers/: flake_org.rs  flake_source.rs  mod.rs  nix_build.rs
tatara-operator/src/crds/: flake_org.rs  flake_source.rs  mod.rs  nix_build.rs  nix_build_pool.rs
tatara-os/: Cargo.toml
tatara-os/src/: activation.rs  closure.rs  config.rs  lib.rs  synth.rs
tatara-os/tests/: integration.rs
tatara-pkgs/: Cargo.toml
tatara-pkgs/src/: bridge.rs  generator.rs  lib.rs  overlay.rs  set.rs
tatara-pool-reconciler/: Cargo.toml
tatara-pool-reconciler/src/: allocation_decide.rs  context.rs  controller_allocation.rs  controller_pool.rs  desired.rs  lib.rs  main.rs  naming.rs  pool_decide.rs  return_policy.rs  router.rs
tatara-process/: Cargo.toml  README.md
tatara-process/src/: allocation.rs  attestation.rs  boundary.rs  classification.rs  compliance.rs  crd.rs  encapsulates.rs  env.rs  ephemeral.rs  export.rs  hostname.rs  identity.rs  intent.rs  lib.rs  lifetime.rs  lifetime_clock.rs  matrix.rs  phase.rs  pool.rs  receipt.rs  routing.rs  signal.rs  spec.rs  status.rs  table.rs  tagged_union.rs
tatara-reconciler/: Cargo.toml  README.md
tatara-reconciler/src/: boundary.rs  claim.rs  context.rs  controller.rs  edges.rs  ephemeral_defaults.rs  lib.rs  lifetime_clock.rs  main.rs  patch.rs  phase_machine.rs  pid.rs  render.rs  signals.rs  ssapply.rs  table_controller.rs
tatara-reconciler/tests/: ephemeral_pipeline.rs
tatara-terreiro/: Cargo.toml
tatara-terreiro/src/: lib.rs
tatara-testing/: Cargo.toml
tatara-testing/src/: fixtures.rs  lib.rs  server.rs  store.rs
tatara-ui/: Cargo.toml
tatara-ui/src/: event.rs  lib.rs  palette.rs  render.rs  sigil.rs  theme.rs
(+121 files in other folders)
