[workspace]
members = [
    "tatara-core",
    "tatara-engine",
    "tatara-api",
    "tatara-cli",
    "tatara-operator",
    "tatara-kube",
    "tatara-mcp",
    "tatara-net",
    "tatara-testing",
    "ro-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Pleme.io <engineering@pleme.io>"]
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
