[workspace]
members = [
    "tatara-core",
    "tatara-engine",
    # ── K8s-as-processes surface (v1alpha1) ─────────────────────────────
    "tatara-process",     # Process/ProcessTable CRDs — unified K8s-as-Unix-process wire format
    "tatara-lattice",     # Lattice algebra over Classification — replaces qualities_match
    "tatara-lisp",        # Homoiconic S-expression surface
    "tatara-lisp-derive", # `#[derive(TataraDomain)]` — proc-macro for auto-generating Lisp compilers
    "tatara-domains",     # Reference typed domains (MonitorSpec, NotifySpec) authored as Lisp
    "tatara-nix",         # Nix's academic essence re-expressed in Rust+Lisp — Derivation, Module, Overlay, Flake
    "tatara-terreiro",    # Arena-enclosed, sealable, serializable Lisp virtual environments (Brazilian × pleme naming)
    "tatara-eval",        # Optimized in-memory Lisp interpreter (Sexp → Value, produces typed Derivations)
    "tatara-pkgs",        # Package set abstraction + nixpkgs bridge + tend-driven tatara-lisp mirror
    "tatara-os",          # NixOS-equivalent — SystemConfig + activation synth + module fixpoint
    "tatara-reconciler",  # FluxCD-adjacent controller — replaces tatara-kube
    # ── existing surfaces ──────────────────────────────────────────────
    "tatara-api",
    "tatara-cli",
    "tatara-operator",    # DEPRECATED — NixBuild semantics absorbed into Process (Intent::Nix)
    "tatara-kube",        # DEPRECATED — replaced by tatara-reconciler (FluxCD-aware)
    "tatara-mcp",
    "tatara-net",
    "tatara-testing",
    "ro-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Pleme.io <engineering@pleme.io>"]
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
