[workspace]
members = [
    "tatara-core",
    "tatara-engine",
    # ── K8s-as-processes surface (v1alpha1) ─────────────────────────────
    "tatara-process",     # Process/ProcessTable CRDs — unified K8s-as-Unix-process wire format
    "tatara-lattice",     # Lattice algebra over Classification — replaces qualities_match
    "tatara-lisp",        # Homoiconic S-expression surface
    "tatara-lisp-derive", # `#[derive(TataraDomain)]` — proc-macro for auto-generating Lisp compilers
    "tatara-domains",     # Reference typed domains (MonitorSpec, NotifySpec) authored as Lisp
    "tatara-nix",         # Nix's academic essence re-expressed in Rust+Lisp — Derivation, Module, Overlay, Flake
    "tatara-terreiro",    # Arena-enclosed, sealable, serializable Lisp virtual environments (Brazilian × pleme naming)
    "tatara-eval",        # Optimized in-memory Lisp interpreter (Sexp → Value, produces typed Derivations)
    "tatara-pkgs",        # Package set abstraction + nixpkgs bridge + tend-driven tatara-lisp mirror
    "tatara-os",          # NixOS-equivalent — SystemConfig + activation synth + module fixpoint
    "tatara-init",        # tatara IS PID 1 — typed service supervisor, drop-in for systemd
    "tatara-vm",          # Typed VM definitions — Darwin-hosted Linux guests via vfkit/qemu/kasou
    # ── Declarative guests (Phase H — see docs/declarative-guests.md) ───
    "tatara-hvf",         # Apple Hypervisor.framework backend — bare metal HVF, virtio devices
    "tatara-wasm",        # Multi-runtime WASI/WASM — wasmtime/WasmEdge/Wasmer/wasmi/WAMR behind Cargo features
    "tatara-build-remote", # Layered build transport: Attic → ssh-ng → local; quero.lol by default
    "tatara-hospedeiro",  # Guest runtime orchestrator (Brazilian × pleme naming) — HVF/VZ/WASM supervisor
    "tatara-ui",          # Nord-themed CLI UX — typed palette/sigils/UiEvent stream with BLAKE3 run hashes
    "tatara-reconciler",  # FluxCD-adjacent controller — replaces tatara-kube
    "tatara-pool-reconciler", # EphemeralPool + EphemeralAllocation controller — pool population mgmt
    "tatara-github-watcher",  # GitHub webhook receiver — PR events → EphemeralAllocation CRs
    # ── existing surfaces ──────────────────────────────────────────────
    "tatara-api",
    "tatara-cli",
    "tatara-operator",    # DEPRECATED — NixBuild semantics absorbed into Process (Intent::Nix)
    "tatara-kube",        # DEPRECATED — replaced by tatara-reconciler (FluxCD-aware)
    "tatara-mcp",
    "tatara-net",
    "tatara-testing",
    # Closed-loop auth probe — emits a tatara-receipt/v1 envelope to a
    # ConfigMap; consumed by tatara-reconciler's ClosedLoopAuth evaluator.
    "tatara-closed-loop-probe",
    # Export worker — runs one declared ExportSpec from an ephemeral
    # Process. Reads the artifact (ConfigMap key / Process snapshot /
    # run-marker), ships it through the chosen VectorChannel (Vector
    # HTTP ingest / NATS JetStream / stdout), emits a typed
    # ReceiptEnvelope of the export action so it chains into the
    # Process's BLAKE3 attestation tree.
    "tatara-export-worker",
    "ro-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.30"
edition = "2021"
authors = ["Pleme.io <engineering@pleme.io>"]
license = "MIT"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
