[package]
name = "ro"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "ro (炉) — CLI client for the Nix build platform"
default-run = "ro"

[[bin]]
name = "ro"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
shikumi = { git = "https://github.com/pleme-io/shikumi" }

# Output
comfy-table = "7"
colored = "3"

# Filesystem
dirs = "6"

# Error handling + logging
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
