[package]
name = "tatara-export-worker"
description = "Runs one declared ExportSpec from an ephemeral Process — reads the artifact, ships through the chosen VectorChannel, emits a typed export receipt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "tatara-export-worker"
path = "src/main.rs"

[dependencies]
# Typed ExportSpec + ReceiptEnvelope + ProcessSpec
tatara-process = { path = "../tatara-process" }

# K8s API — read ConfigMaps + Process status, patch the receipt ConfigMap
kube = { version = "0.99", features = ["runtime", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# HTTP client (Vector ingest)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# NATS JetStream
async-nats = "0.39"

# Hashing + serialization
blake3 = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# CLI + env wiring
clap = { version = "4", features = ["derive", "env"] }

# Errors + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
