[package]
name        = "tatara-hospedeiro"
description = "Guest runtime orchestrator — 'hospedeiro' = 'host' in Portuguese. Polymorphic supervisor dispatching GuestSpec → HVF/VZ/WASM backends. Phase H.6."
version     .workspace = true
edition     .workspace = true
authors     .workspace = true
license     .workspace = true

[lib]
name = "tatara_hospedeiro"
path = "src/lib.rs"

[dependencies]
tatara-build-remote = { path = "../tatara-build-remote" }
tatara-wasm         = { path = "../tatara-wasm" }
tatara-hvf          = { path = "../tatara-hvf" }
tatara-vm           = { path = "../tatara-vm" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
tracing    = "0.1"

[dev-dependencies]
tempfile = "3"
wat      = "1"
