[package]
name        = "tatara-hospedeiro"
description = "Guest runtime orchestrator — 'hospedeiro' = 'host' in Portuguese. Polymorphic supervisor dispatching GuestSpec → HVF/VZ/WASM backends. Phase H.6."
version     .workspace = true
edition     .workspace = true
authors     .workspace = true
license     .workspace = true

[lib]
name = "tatara_hospedeiro"
path = "src/lib.rs"

[dependencies]
tatara-build-remote = { path = "../tatara-build-remote" , version = "0.2.65" }
tatara-wasm         = { path = "../tatara-wasm" , version = "0.2.65" }
tatara-hvf          = { path = "../tatara-hvf" , version = "0.2.65" }
tatara-vm           = { path = "../tatara-vm" , version = "0.2.65" }
tatara-process      = { path = "../tatara-process" , version = "0.2.65" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
tracing    = "0.1"

[dev-dependencies]
tempfile = "3"
wat      = "1"
