[package]
name        = "tatara-hvf"
description = "Apple Hypervisor.framework backend for tatara — bare-metal VM engine with own virtio device models. Phase H.2."
version     .workspace = true
edition     .workspace = true
authors     .workspace = true
license     .workspace = true

[lib]
name = "tatara_hvf"
path = "src/lib.rs"

# Binding only links on aarch64-darwin — Hypervisor.framework is
# Apple Silicon only. Other targets compile the crate (types,
# feature-gated structure) but stub the real FFI.
[target.'cfg(all(target_arch = "aarch64", target_os = "macos"))'.dependencies]
applevisor = "1.0"

[dependencies]
serde     = { version = "1", features = ["derive"] }
thiserror = "1"
tracing   = "0.1"
