[package]
name = "tatara-init"
description = "tatara IS PID 1 — typed service supervisor authored in tatara-lisp. Drop-in replacement for systemd/s6/openrc inside a tatara-os Linux guest."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-lisp = { path = "../tatara-lisp" , version = "0.2.65" }
tatara-lisp-derive = { path = "../tatara-lisp-derive" , version = "0.2.65" }
tatara-eval = { path = "../tatara-eval" , version = "0.2.65" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "tatara-init"
path = "src/bin/tatara-init.rs"
