[package]
name = "tatara-lattice"
description = "Lattice algebra over tatara classification — meet/join/leq, replaces qualities_match"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-core = { path = "../tatara-core" , version = "0.2.65" }
tatara-process = { path = "../tatara-process" , version = "0.2.65" }
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["chrono"] }

[dev-dependencies]
proptest = "1"
