[package]
name = "tatara-mcp"
description = "MCP server for AI-assisted convergence computing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-core = { path = "../tatara-core" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
