[package]
name = "tatara-nix"
description = "Nix's academic essence, re-expressed in Rust + Lisp. Derivation, StorePath, Module, Overlay, Flake — all typed, all Lisp-authorable via #[derive(TataraDomain)], all attestable via BLAKE3."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tatara-lisp = { path = "../tatara-lisp" , version = "0.2.65" }
tatara-lisp-derive = { path = "../tatara-lisp-derive" , version = "0.2.65" }
tatara-lattice = { path = "../tatara-lattice" , version = "0.2.65" }

# Canonical hashing for StorePath + attestation
blake3 = "1"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hermetic build tmpdirs for InProcessRealizer
tempfile = "3"

# Errors
thiserror = "2"
