[package]
name = "tatara-operator"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
description = "K8s operator for tatara — bridges NixBuild CRDs to bare-metal nix builders via NATS"

[dependencies]
# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
schemars = { version = "0.8", features = ["chrono"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# NATS
async-nats = "0.38"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling + logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs + time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "crd-gen"
path = "src/bin/crd_gen.rs"

[lints.clippy]
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
